docs/examples/microbots_introduction/log_analysis_logger_debug.txt
(.venv) sikannan@sikannan-ubuntu-vm:~/codeBase/microbots-introduction$ python3 log_analysis_bot.py
DEBUG:docker.utils.config:Trying paths: ['/home/sikannan/.docker/config.json', '/home/sikannan/.dockercfg']
DEBUG:docker.utils.config:No config file found
DEBUG:docker.utils.config:Trying paths: ['/home/sikannan/.docker/config.json', '/home/sikannan/.dockercfg']
DEBUG:docker.utils.config:No config file found
DEBUG:urllib3.connectionpool:http://localhost:None "GET /version HTTP/1.1" 200 891
INFO:microbots.environment.local_docker.LocalDockerEnvironment:🗂️  Created working directory at /home/sikannan/MICROBOTS_WORKDIR_79b91420
INFO:microbots.environment.local_docker.LocalDockerEnvironment:📦 Volume mapping: /home/sikannan/codeBase/microbots-introduction/code → /ro/code
DEBUG:urllib3.connectionpool:http://localhost:None "POST /v1.54/containers/create HTTP/1.1" 201 88
DEBUG:urllib3.connectionpool:http://localhost:None "GET /v1.54/containers/5f1012fd83ae4a70bc9c7223afe67345c4bb467557ae711794e26217fd23fdbf/json HTTP/1.1" 200 None
DEBUG:urllib3.connectionpool:http://localhost:None "POST /v1.54/containers/5f1012fd83ae4a70bc9c7223afe67345c4bb467557ae711794e26217fd23fdbf/start HTTP/1.1" 204 0
INFO:microbots.environment.local_docker.LocalDockerEnvironment:🚀 Started container 5f1012fd83ae with image kavyasree261002/shell_server:latest on host port 58241
DEBUG:microbots.environment.local_docker.LocalDockerEnvironment:➡️  Executing command in container: mkdir -p //workdir/code //workdir/overlay/code/upper //workdir/overlay/code/work && sleep 5 && mount -t overlay overlay -o lowerdir=/ro/code/,upperdir=/workdir/overlay/code/upper/,workdir=/workdir/overlay/code/work/ //workdir/code
DEBUG:urllib3.connectionpool:Starting new HTTP connection (1): localhost:58241
DEBUG:urllib3.connectionpool:http://localhost:58241 "POST / HTTP/1.1" 200 71
DEBUG:microbots.environment.local_docker.LocalDockerEnvironment:Command completed in 5.02s
DEBUG:microbots.environment.local_docker.LocalDockerEnvironment:⬅️  Return Code: 0,
Stdout:

Stderr:

INFO:microbots.environment.local_docker.LocalDockerEnvironment:🔒 Set up overlay mount for read-only directory at /workdir/code
DEBUG:microbots.environment.local_docker.LocalDockerEnvironment:➡️  Executing command in container: cd //workdir/code
DEBUG:urllib3.connectionpool:Starting new HTTP connection (1): localhost:58241
DEBUG:urllib3.connectionpool:http://localhost:58241 "POST / HTTP/1.1" 200 71
DEBUG:microbots.environment.local_docker.LocalDockerEnvironment:Command completed in 0.00s
DEBUG:microbots.environment.local_docker.LocalDockerEnvironment:⬅️  Return Code: 0,
Stdout:

Stderr:

DEBUG:microbots.environment.local_docker.LocalDockerEnvironment:➡️  Executing command in container: test -d /var
DEBUG:urllib3.connectionpool:Starting new HTTP connection (1): localhost:58241
DEBUG:urllib3.connectionpool:http://localhost:58241 "POST / HTTP/1.1" 200 71
DEBUG:microbots.environment.local_docker.LocalDockerEnvironment:Command completed in 0.00s
DEBUG:microbots.environment.local_docker.LocalDockerEnvironment:⬅️  Return Code: 0,
Stdout:

Stderr:

DEBUG:microbots.environment.local_docker.LocalDockerEnvironment:✅ Destination directory already exists: /var
DEBUG:microbots.environment.local_docker.LocalDockerEnvironment:📁 Copying /home/sikannan/codeBase/microbots-introduction/code/build.log to container:/var/log
INFO:microbots.environment.local_docker.LocalDockerEnvironment:✅ Successfully copied /home/sikannan/codeBase/microbots-introduction/code/build.log to container:/var/log
DEBUG:openai._base_client:Request options: {'method': 'post', 'url': '/responses', 'files': None, 'idempotency_key': 'stainless-python-retry-91b2c538-f866-4600-9e07-c773117d1a68', 'json_data': {'input': [{'role': 'system', 'content': '\n        \nYou are a helpful agent well versed in software development and debugging.\n\nYou will be provided with a coding or debugging task to complete inside a sandboxed shell environment.\nThere is a shell session open for you.\nYou will be provided with a task and you should achieve it using the shell commands.\nAll your response must be in the following json format:\n\n{\n    "task_done": <bool>,  // Indicates if the task is completed\n    "thoughts": <str>,     // The reasoning behind the decision\n    "command": <str>     // The command to be executed\n}\n\nThe properties ( task_done, thoughts, command ) are mandatory on each response.\nGive the command one at a time to solve the given task. As long as you\'re not done with the task, set task_done to false.\nWhen you are sure that the task is completed, set task_done to true, set command to empty string and provide your final thoughts in the thoughts field.\nDon\'t add any chat or extra messages outside the json format. Because the system will parse only the json response.\nAny of your thoughts must be in the \'thoughts\' field.\n\nafter each command, the system will execute the command and respond to you with the output.\nEnsure to run only one command at a time.\nNEVER use commands that produce large amounts of output or take a long time to run to avoid exceeding context limits.\nUse specific patterns: \'find <path> -name "*.c" -maxdepth 2\' instead of recursive exploration.\nNo human is involved in the task. So, don\'t seek human intervention.\n\nRemember following important points\n1. If a command fails, analyze the error message and provide an alternative command in your next response. Same command will not pass again.\n2. Avoid using recursive commands like \'ls -R\', \'rm -rf\', \'tree\', or \'find\' without depth limits as they can produce excessive output or be destructive.\n3. You cannot run any interactive commands like vim, nano, etc.\n\n        You are a helpful log analysis bot. Your job is to analyze a log file and identify the root-cause if there are any failure. You\'ll be given read-only access to the code from where the log is generated. The read-only code is available at //workdir/code.\n\nThe log file to analyze will be given in the user prompt. You can find the provided log file under the directory //var/log/\n\nOnly when you have run all necessary commands and identified the root cause, you should give me the final result.\n        '}, {'role': 'user', 'content': '\n            Analyze the log file `/var/log`\n        '}], 'model': 'gpt-5-swe-agent'}}
DEBUG:openai._base_client:Sending HTTP Request: POST https://azlinux-chatbot-2025.openai.azure.com/openai/v1/responses
DEBUG:httpcore.connection:connect_tcp.started host='azlinux-chatbot-2025.openai.azure.com' port=443 local_address=None timeout=5.0 socket_options=None
DEBUG:httpcore.connection:connect_tcp.complete return_value=<httpcore._backends.sync.SyncStream object at 0x76abb1162780>
DEBUG:httpcore.connection:start_tls.started ssl_context=<ssl.SSLContext object at 0x76abb17e9050> server_hostname='azlinux-chatbot-2025.openai.azure.com' timeout=5.0
DEBUG:httpcore.connection:start_tls.complete return_value=<httpcore._backends.sync.SyncStream object at 0x76abb1236720>
DEBUG:httpcore.http11:send_request_headers.started request=<Request [b'POST']>
DEBUG:httpcore.http11:send_request_headers.complete
DEBUG:httpcore.http11:send_request_body.started request=<Request [b'POST']>
DEBUG:httpcore.http11:send_request_body.complete
DEBUG:httpcore.http11:receive_response_headers.started request=<Request [b'POST']>
DEBUG:httpcore.http11:receive_response_headers.complete return_value=(b'HTTP/1.1', 200, b'OK', [(b'Content-Length', b'3415'), (b'Content-Type', b'application/json'), (b'skip-error-remapping', b'true'), (b'x-ms-is-spilled-over', b'false'), (b'x-ratelimit-key', b'gpt-5-swe-agent'), (b'x-ratelimit-remaining-requests', b'1499'), (b'x-ratelimit-reset-requests', b'0'), (b'x-ratelimit-limit-requests', b'1500'), (b'x-ratelimit-renewalperiod-requests', b'60'), (b'x-ratelimit-abusepenalty-active', b'False'), (b'x-ratelimit-remaining-tokens', b'149386'), (b'x-ratelimit-reset-tokens', b'0'), (b'x-ratelimit-limit-tokens', b'150000'), (b'x-ratelimit-renewalperiod-tokens', b'60'), (b'azureai-fe-is-streaming', b'False'), (b'x-ms-served-model', b'gpt-5-2025-08-07'), (b'x-request-id', b'17fdd67c-a4d6-4ffc-b2a2-3cafe9dae9f0'), (b'apim-request-id', b'6222c014-dd9a-4dcb-89c3-53c29b37af05'), (b'Strict-Transport-Security', b'max-age=31536000; includeSubDomains; preload'), (b'x-ms-client-request-id', b'Not-Set'), (b'x-content-type-options', b'nosniff'), (b'x-ms-region', b'East US 2'), (b'Date', b'Sat, 23 May 2026 03:26:26 GMT')])
INFO:httpx:HTTP Request: POST https://azlinux-chatbot-2025.openai.azure.com/openai/v1/responses "HTTP/1.1 200 OK"
DEBUG:httpcore.http11:receive_response_body.started request=<Request [b'POST']>
DEBUG:httpcore.http11:receive_response_body.complete
DEBUG:httpcore.http11:response_closed.started
DEBUG:httpcore.http11:response_closed.complete
DEBUG:openai._base_client:HTTP Response: POST https://azlinux-chatbot-2025.openai.azure.com/openai/v1/responses "200 OK" Headers({'content-length': '3415', 'content-type': 'application/json', 'skip-error-remapping': 'true', 'x-ms-is-spilled-over': 'false', 'x-ratelimit-key': 'gpt-5-swe-agent', 'x-ratelimit-remaining-requests': '1499', 'x-ratelimit-reset-requests': '0', 'x-ratelimit-limit-requests': '1500', 'x-ratelimit-renewalperiod-requests': '60', 'x-ratelimit-abusepenalty-active': 'False', 'x-ratelimit-remaining-tokens': '149386', 'x-ratelimit-reset-tokens': '0', 'x-ratelimit-limit-tokens': '150000', 'x-ratelimit-renewalperiod-tokens': '60', 'azureai-fe-is-streaming': 'False', 'x-ms-served-model': 'gpt-5-2025-08-07', 'x-request-id': '17fdd67c-a4d6-4ffc-b2a2-3cafe9dae9f0', 'apim-request-id': '6222c014-dd9a-4dcb-89c3-53c29b37af05', 'strict-transport-security': 'max-age=31536000; includeSubDomains; preload', 'x-ms-client-request-id': 'Not-Set', 'x-content-type-options': 'nosniff', 'x-ms-region': 'East US 2', 'date': 'Sat, 23 May 2026 03:26:26 GMT'})
DEBUG:openai._base_client:request_id: 17fdd67c-a4d6-4ffc-b2a2-3cafe9dae9f0
INFO:microbots.llm.llm:The llm response is {'task_done': False, 'thoughts': 'First, I need to see what files exist under /var/log to identify the target log file(s) for analysis.', 'command': 'ls -1 /var/log'} 
INFO: MicroBot : ℹ️  TASK STARTED : 
            Analyze the log file `/var/log`
        ...
INFO: MicroBot :-------------------- Step-1 --------------------
INFO: MicroBot : 💭  LLM thoughts: First, I need to see what files exist under /var/log to identify the target log file(s) for analysis.
INFO: MicroBot : ➡️  LLM tool call : "ls -1 /var/log"
DEBUG:microbots.environment.local_docker.LocalDockerEnvironment:➡️  Executing command in container: ls -1 /var/log
DEBUG:urllib3.connectionpool:Starting new HTTP connection (1): localhost:58241
DEBUG:urllib3.connectionpool:http://localhost:58241 "POST / HTTP/1.1" 200 173
DEBUG:microbots.environment.local_docker.LocalDockerEnvironment:Command completed in 0.00s
DEBUG:microbots.environment.local_docker.LocalDockerEnvironment:⬅️  Return Code: 0,
Stdout:
ShellCommunicator.log
alternatives.log
apt
btmp
build.log
dpkg.log
fontconfig.log
lastlog
wtmp
Stderr:

DEBUG: MicroBot : 🔧  Command executed.
Return Code: 0
Stdout:
ShellCommunicator.log
alternatives.log
apt
btmp
build.log
dpkg.log
fontconfig.log
lastlog
wtmp
Stderr:

INFO: MicroBot : ⬅️  Command output:
ShellCommunicator.log
alternatives.log
apt
btmp
build.log
dpkg.log
fontconfig.log
lastlog
wtmp
DEBUG:openai._base_client:Request options: {'method': 'post', 'url': '/responses', 'files': None, 'idempotency_key': 'stainless-python-retry-91a2e11a-2473-4c30-a50f-fb78fd7fc16d', 'json_data': {'input': [{'role': 'system', 'content': '\n        \nYou are a helpful agent well versed in software development and debugging.\n\nYou will be provided with a coding or debugging task to complete inside a sandboxed shell environment.\nThere is a shell session open for you.\nYou will be provided with a task and you should achieve it using the shell commands.\nAll your response must be in the following json format:\n\n{\n    "task_done": <bool>,  // Indicates if the task is completed\n    "thoughts": <str>,     // The reasoning behind the decision\n    "command": <str>     // The command to be executed\n}\n\nThe properties ( task_done, thoughts, command ) are mandatory on each response.\nGive the command one at a time to solve the given task. As long as you\'re not done with the task, set task_done to false.\nWhen you are sure that the task is completed, set task_done to true, set command to empty string and provide your final thoughts in the thoughts field.\nDon\'t add any chat or extra messages outside the json format. Because the system will parse only the json response.\nAny of your thoughts must be in the \'thoughts\' field.\n\nafter each command, the system will execute the command and respond to you with the output.\nEnsure to run only one command at a time.\nNEVER use commands that produce large amounts of output or take a long time to run to avoid exceeding context limits.\nUse specific patterns: \'find <path> -name "*.c" -maxdepth 2\' instead of recursive exploration.\nNo human is involved in the task. So, don\'t seek human intervention.\n\nRemember following important points\n1. If a command fails, analyze the error message and provide an alternative command in your next response. Same command will not pass again.\n2. Avoid using recursive commands like \'ls -R\', \'rm -rf\', \'tree\', or \'find\' without depth limits as they can produce excessive output or be destructive.\n3. You cannot run any interactive commands like vim, nano, etc.\n\n        You are a helpful log analysis bot. Your job is to analyze a log file and identify the root-cause if there are any failure. You\'ll be given read-only access to the code from where the log is generated. The read-only code is available at //workdir/code.\n\nThe log file to analyze will be given in the user prompt. You can find the provided log file under the directory //var/log/\n\nOnly when you have run all necessary commands and identified the root cause, you should give me the final result.\n        '}, {'role': 'user', 'content': '\n            Analyze the log file `/var/log`\n        '}, {'role': 'assistant', 'content': '{"task_done": false, "thoughts": "First, I need to see what files exist under /var/log to identify the target log file(s) for analysis.", "command": "ls -1 /var/log"}'}, {'role': 'user', 'content': 'ShellCommunicator.log\nalternatives.log\napt\nbtmp\nbuild.log\ndpkg.log\nfontconfig.log\nlastlog\nwtmp'}], 'model': 'gpt-5-swe-agent'}}
DEBUG:openai._base_client:Sending HTTP Request: POST https://azlinux-chatbot-2025.openai.azure.com/openai/v1/responses
DEBUG:httpcore.http11:send_request_headers.started request=<Request [b'POST']>
DEBUG:httpcore.http11:send_request_headers.complete
DEBUG:httpcore.http11:send_request_body.started request=<Request [b'POST']>
DEBUG:httpcore.http11:send_request_body.complete
DEBUG:httpcore.http11:receive_response_headers.started request=<Request [b'POST']>
DEBUG:httpcore.http11:receive_response_headers.complete return_value=(b'HTTP/1.1', 200, b'OK', [(b'Content-Length', b'3537'), (b'Content-Type', b'application/json'), (b'skip-error-remapping', b'true'), (b'x-ms-is-spilled-over', b'false'), (b'x-ratelimit-key', b'gpt-5-swe-agent'), (b'x-ratelimit-remaining-requests', b'1499'), (b'x-ratelimit-reset-requests', b'0'), (b'x-ratelimit-limit-requests', b'1500'), (b'x-ratelimit-renewalperiod-requests', b'60'), (b'x-ratelimit-abusepenalty-active', b'False'), (b'x-ratelimit-remaining-tokens', b'149321'), (b'x-ratelimit-reset-tokens', b'0'), (b'x-ratelimit-limit-tokens', b'150000'), (b'x-ratelimit-renewalperiod-tokens', b'60'), (b'azureai-fe-is-streaming', b'False'), (b'x-ms-served-model', b'gpt-5-2025-08-07'), (b'x-request-id', b'63044a71-3323-4ec0-bf7c-8fdf9e60ca5d'), (b'apim-request-id', b'e7c50855-f77c-47b5-863f-d7e46631161e'), (b'Strict-Transport-Security', b'max-age=31536000; includeSubDomains; preload'), (b'x-ms-client-request-id', b'Not-Set'), (b'x-content-type-options', b'nosniff'), (b'x-ms-region', b'East US 2'), (b'Date', b'Sat, 23 May 2026 03:26:31 GMT')])
INFO:httpx:HTTP Request: POST https://azlinux-chatbot-2025.openai.azure.com/openai/v1/responses "HTTP/1.1 200 OK"
DEBUG:httpcore.http11:receive_response_body.started request=<Request [b'POST']>
DEBUG:httpcore.http11:receive_response_body.complete
DEBUG:httpcore.http11:response_closed.started
DEBUG:httpcore.http11:response_closed.complete
DEBUG:openai._base_client:HTTP Response: POST https://azlinux-chatbot-2025.openai.azure.com/openai/v1/responses "200 OK" Headers({'content-length': '3537', 'content-type': 'application/json', 'skip-error-remapping': 'true', 'x-ms-is-spilled-over': 'false', 'x-ratelimit-key': 'gpt-5-swe-agent', 'x-ratelimit-remaining-requests': '1499', 'x-ratelimit-reset-requests': '0', 'x-ratelimit-limit-requests': '1500', 'x-ratelimit-renewalperiod-requests': '60', 'x-ratelimit-abusepenalty-active': 'False', 'x-ratelimit-remaining-tokens': '149321', 'x-ratelimit-reset-tokens': '0', 'x-ratelimit-limit-tokens': '150000', 'x-ratelimit-renewalperiod-tokens': '60', 'azureai-fe-is-streaming': 'False', 'x-ms-served-model': 'gpt-5-2025-08-07', 'x-request-id': '63044a71-3323-4ec0-bf7c-8fdf9e60ca5d', 'apim-request-id': 'e7c50855-f77c-47b5-863f-d7e46631161e', 'strict-transport-security': 'max-age=31536000; includeSubDomains; preload', 'x-ms-client-request-id': 'Not-Set', 'x-content-type-options': 'nosniff', 'x-ms-region': 'East US 2', 'date': 'Sat, 23 May 2026 03:26:31 GMT'})
DEBUG:openai._base_client:request_id: 63044a71-3323-4ec0-bf7c-8fdf9e60ca5d
INFO:microbots.llm.llm:The llm response is {'task_done': False, 'thoughts': "Identify which log contains failures. Start with build.log as it's commonly used for build errors, but first check its length to avoid dumping huge content.", 'command': "wc -l /var/log/build.log 2>/dev/null || echo 'no build.log or not regular file'"} 
INFO: MicroBot :-------------------- Step-2 --------------------
INFO: MicroBot : 💭  LLM thoughts: Identify which log contains failures. Start with build.log as it's commonly used for build errors, but first check its length to avoid dumping huge content.
INFO: MicroBot : ➡️  LLM tool call : "wc -l /var/log/build.log 2>/dev/null || echo 'no build.log or not regular file'"
DEBUG:microbots.environment.local_docker.LocalDockerEnvironment:➡️  Executing command in container: wc -l /var/log/build.log 2>/dev/null || echo 'no build.log or not regular file'
DEBUG:urllib3.connectionpool:Starting new HTTP connection (1): localhost:58241
DEBUG:urllib3.connectionpool:http://localhost:58241 "POST / HTTP/1.1" 200 91
DEBUG:microbots.environment.local_docker.LocalDockerEnvironment:Command completed in 0.01s
DEBUG:microbots.environment.local_docker.LocalDockerEnvironment:⬅️  Return Code: 0,
Stdout:
7 /var/log/build.log
Stderr:

DEBUG: MicroBot : 🔧  Command executed.
Return Code: 0
Stdout:
7 /var/log/build.log
Stderr:

INFO: MicroBot : ⬅️  Command output:
7 /var/log/build.log
DEBUG:openai._base_client:Request options: {'method': 'post', 'url': '/responses', 'files': None, 'idempotency_key': 'stainless-python-retry-365359aa-20c2-4775-9641-cc2c5607398b', 'json_data': {'input': [{'role': 'system', 'content': '\n        \nYou are a helpful agent well versed in software development and debugging.\n\nYou will be provided with a coding or debugging task to complete inside a sandboxed shell environment.\nThere is a shell session open for you.\nYou will be provided with a task and you should achieve it using the shell commands.\nAll your response must be in the following json format:\n\n{\n    "task_done": <bool>,  // Indicates if the task is completed\n    "thoughts": <str>,     // The reasoning behind the decision\n    "command": <str>     // The command to be executed\n}\n\nThe properties ( task_done, thoughts, command ) are mandatory on each response.\nGive the command one at a time to solve the given task. As long as you\'re not done with the task, set task_done to false.\nWhen you are sure that the task is completed, set task_done to true, set command to empty string and provide your final thoughts in the thoughts field.\nDon\'t add any chat or extra messages outside the json format. Because the system will parse only the json response.\nAny of your thoughts must be in the \'thoughts\' field.\n\nafter each command, the system will execute the command and respond to you with the output.\nEnsure to run only one command at a time.\nNEVER use commands that produce large amounts of output or take a long time to run to avoid exceeding context limits.\nUse specific patterns: \'find <path> -name "*.c" -maxdepth 2\' instead of recursive exploration.\nNo human is involved in the task. So, don\'t seek human intervention.\n\nRemember following important points\n1. If a command fails, analyze the error message and provide an alternative command in your next response. Same command will not pass again.\n2. Avoid using recursive commands like \'ls -R\', \'rm -rf\', \'tree\', or \'find\' without depth limits as they can produce excessive output or be destructive.\n3. You cannot run any interactive commands like vim, nano, etc.\n\n        You are a helpful log analysis bot. Your job is to analyze a log file and identify the root-cause if there are any failure. You\'ll be given read-only access to the code from where the log is generated. The read-only code is available at //workdir/code.\n\nThe log file to analyze will be given in the user prompt. You can find the provided log file under the directory //var/log/\n\nOnly when you have run all necessary commands and identified the root cause, you should give me the final result.\n        '}, {'role': 'user', 'content': '\n            Analyze the log file `/var/log`\n        '}, {'role': 'assistant', 'content': '{"task_done": false, "thoughts": "First, I need to see what files exist under /var/log to identify the target log file(s) for analysis.", "command": "ls -1 /var/log"}'}, {'role': 'user', 'content': 'ShellCommunicator.log\nalternatives.log\napt\nbtmp\nbuild.log\ndpkg.log\nfontconfig.log\nlastlog\nwtmp'}, {'role': 'assistant', 'content': '{"task_done": false, "thoughts": "Identify which log contains failures. Start with build.log as it\'s commonly used for build errors, but first check its length to avoid dumping huge content.", "command": "wc -l /var/log/build.log 2>/dev/null || echo \'no build.log or not regular file\'"}'}, {'role': 'user', 'content': '7 /var/log/build.log'}], 'model': 'gpt-5-swe-agent'}}
DEBUG:openai._base_client:Sending HTTP Request: POST https://azlinux-chatbot-2025.openai.azure.com/openai/v1/responses
DEBUG:httpcore.http11:send_request_headers.started request=<Request [b'POST']>
DEBUG:httpcore.http11:send_request_headers.complete
DEBUG:httpcore.http11:send_request_body.started request=<Request [b'POST']>
DEBUG:httpcore.http11:send_request_body.complete
DEBUG:httpcore.http11:receive_response_headers.started request=<Request [b'POST']>
DEBUG:httpcore.http11:receive_response_headers.complete return_value=(b'HTTP/1.1', 200, b'OK', [(b'Content-Length', b'3393'), (b'Content-Type', b'application/json'), (b'skip-error-remapping', b'true'), (b'x-ms-is-spilled-over', b'false'), (b'x-ratelimit-key', b'gpt-5-swe-agent'), (b'x-ratelimit-remaining-requests', b'1499'), (b'x-ratelimit-reset-requests', b'0'), (b'x-ratelimit-limit-requests', b'1500'), (b'x-ratelimit-renewalperiod-requests', b'60'), (b'x-ratelimit-abusepenalty-active', b'False'), (b'x-ratelimit-remaining-tokens', b'149245'), (b'x-ratelimit-reset-tokens', b'0'), (b'x-ratelimit-limit-tokens', b'150000'), (b'x-ratelimit-renewalperiod-tokens', b'60'), (b'azureai-fe-is-streaming', b'False'), (b'x-ms-served-model', b'gpt-5-2025-08-07'), (b'x-request-id', b'b0910cc0-7b9f-4943-a9b2-907637854296'), (b'apim-request-id', b'b370b06a-5f05-4196-8c43-bca3ca0dd116'), (b'Strict-Transport-Security', b'max-age=31536000; includeSubDomains; preload'), (b'x-ms-client-request-id', b'Not-Set'), (b'x-content-type-options', b'nosniff'), (b'x-ms-region', b'East US 2'), (b'Date', b'Sat, 23 May 2026 03:26:34 GMT')])
INFO:httpx:HTTP Request: POST https://azlinux-chatbot-2025.openai.azure.com/openai/v1/responses "HTTP/1.1 200 OK"
DEBUG:httpcore.http11:receive_response_body.started request=<Request [b'POST']>
DEBUG:httpcore.http11:receive_response_body.complete
DEBUG:httpcore.http11:response_closed.started
DEBUG:httpcore.http11:response_closed.complete
DEBUG:openai._base_client:HTTP Response: POST https://azlinux-chatbot-2025.openai.azure.com/openai/v1/responses "200 OK" Headers({'content-length': '3393', 'content-type': 'application/json', 'skip-error-remapping': 'true', 'x-ms-is-spilled-over': 'false', 'x-ratelimit-key': 'gpt-5-swe-agent', 'x-ratelimit-remaining-requests': '1499', 'x-ratelimit-reset-requests': '0', 'x-ratelimit-limit-requests': '1500', 'x-ratelimit-renewalperiod-requests': '60', 'x-ratelimit-abusepenalty-active': 'False', 'x-ratelimit-remaining-tokens': '149245', 'x-ratelimit-reset-tokens': '0', 'x-ratelimit-limit-tokens': '150000', 'x-ratelimit-renewalperiod-tokens': '60', 'azureai-fe-is-streaming': 'False', 'x-ms-served-model': 'gpt-5-2025-08-07', 'x-request-id': 'b0910cc0-7b9f-4943-a9b2-907637854296', 'apim-request-id': 'b370b06a-5f05-4196-8c43-bca3ca0dd116', 'strict-transport-security': 'max-age=31536000; includeSubDomains; preload', 'x-ms-client-request-id': 'Not-Set', 'x-content-type-options': 'nosniff', 'x-ms-region': 'East US 2', 'date': 'Sat, 23 May 2026 03:26:34 GMT'})
DEBUG:openai._base_client:request_id: b0910cc0-7b9f-4943-a9b2-907637854296
INFO:microbots.llm.llm:The llm response is {'task_done': False, 'thoughts': 'The build.log is small; display its contents to analyze any errors or warnings.', 'command': "sed -n '1,120p' /var/log/build.log"} 
INFO: MicroBot :-------------------- Step-3 --------------------
INFO: MicroBot : 💭  LLM thoughts: The build.log is small; display its contents to analyze any errors or warnings.
INFO: MicroBot : ➡️  LLM tool call : "sed -n '1,120p' /var/log/build.log"
DEBUG:microbots.environment.local_docker.LocalDockerEnvironment:➡️  Executing command in container: sed -n '1,120p' /var/log/build.log
DEBUG:urllib3.connectionpool:Starting new HTTP connection (1): localhost:58241
DEBUG:urllib3.connectionpool:http://localhost:58241 "POST / HTTP/1.1" 200 260
DEBUG:microbots.environment.local_docker.LocalDockerEnvironment:Command completed in 0.00s
DEBUG:microbots.environment.local_docker.LocalDockerEnvironment:⬅️  Return Code: 0,
Stdout:
app.c: In function ‘add’:
app.c:5:17: error: expected ‘;’ before ‘}’ token
    5 |     return a + b
      |                 ^
      |                 ;
    6 | }
      | ~
Stderr:

DEBUG: MicroBot : 🔧  Command executed.
Return Code: 0
Stdout:
app.c: In function ‘add’:
app.c:5:17: error: expected ‘;’ before ‘}’ token
    5 |     return a + b
      |                 ^
      |                 ;
    6 | }
      | ~
Stderr:

INFO: MicroBot : ⬅️  Command output:
app.c: In function ‘add’:
app.c:5:17: error: expected ‘;’ before ‘}’ token
    5 |     return a + b
      |                 ^
      |                 ;
    6 | }
      | ~
DEBUG:openai._base_client:Request options: {'method': 'post', 'url': '/responses', 'files': None, 'idempotency_key': 'stainless-python-retry-bc98c4aa-e5db-496a-8522-e3ee477f38a9', 'json_data': {'input': [{'role': 'system', 'content': '\n        \nYou are a helpful agent well versed in software development and debugging.\n\nYou will be provided with a coding or debugging task to complete inside a sandboxed shell environment.\nThere is a shell session open for you.\nYou will be provided with a task and you should achieve it using the shell commands.\nAll your response must be in the following json format:\n\n{\n    "task_done": <bool>,  // Indicates if the task is completed\n    "thoughts": <str>,     // The reasoning behind the decision\n    "command": <str>     // The command to be executed\n}\n\nThe properties ( task_done, thoughts, command ) are mandatory on each response.\nGive the command one at a time to solve the given task. As long as you\'re not done with the task, set task_done to false.\nWhen you are sure that the task is completed, set task_done to true, set command to empty string and provide your final thoughts in the thoughts field.\nDon\'t add any chat or extra messages outside the json format. Because the system will parse only the json response.\nAny of your thoughts must be in the \'thoughts\' field.\n\nafter each command, the system will execute the command and respond to you with the output.\nEnsure to run only one command at a time.\nNEVER use commands that produce large amounts of output or take a long time to run to avoid exceeding context limits.\nUse specific patterns: \'find <path> -name "*.c" -maxdepth 2\' instead of recursive exploration.\nNo human is involved in the task. So, don\'t seek human intervention.\n\nRemember following important points\n1. If a command fails, analyze the error message and provide an alternative command in your next response. Same command will not pass again.\n2. Avoid using recursive commands like \'ls -R\', \'rm -rf\', \'tree\', or \'find\' without depth limits as they can produce excessive output or be destructive.\n3. You cannot run any interactive commands like vim, nano, etc.\n\n        You are a helpful log analysis bot. Your job is to analyze a log file and identify the root-cause if there are any failure. You\'ll be given read-only access to the code from where the log is generated. The read-only code is available at //workdir/code.\n\nThe log file to analyze will be given in the user prompt. You can find the provided log file under the directory //var/log/\n\nOnly when you have run all necessary commands and identified the root cause, you should give me the final result.\n        '}, {'role': 'user', 'content': '\n            Analyze the log file `/var/log`\n        '}, {'role': 'assistant', 'content': '{"task_done": false, "thoughts": "First, I need to see what files exist under /var/log to identify the target log file(s) for analysis.", "command": "ls -1 /var/log"}'}, {'role': 'user', 'content': 'ShellCommunicator.log\nalternatives.log\napt\nbtmp\nbuild.log\ndpkg.log\nfontconfig.log\nlastlog\nwtmp'}, {'role': 'assistant', 'content': '{"task_done": false, "thoughts": "Identify which log contains failures. Start with build.log as it\'s commonly used for build errors, but first check its length to avoid dumping huge content.", "command": "wc -l /var/log/build.log 2>/dev/null || echo \'no build.log or not regular file\'"}'}, {'role': 'user', 'content': '7 /var/log/build.log'}, {'role': 'assistant', 'content': '{"task_done": false, "thoughts": "The build.log is small; display its contents to analyze any errors or warnings.", "command": "sed -n \'1,120p\' /var/log/build.log"}'}, {'role': 'user', 'content': 'app.c: In function ‘add’:\napp.c:5:17: error: expected ‘;’ before ‘}’ token\n    5 |     return a + b\n      |                 ^\n      |                 ;\n    6 | }\n      | ~'}], 'model': 'gpt-5-swe-agent'}}
DEBUG:openai._base_client:Sending HTTP Request: POST https://azlinux-chatbot-2025.openai.azure.com/openai/v1/responses
DEBUG:httpcore.http11:send_request_headers.started request=<Request [b'POST']>
DEBUG:httpcore.http11:send_request_headers.complete
DEBUG:httpcore.http11:send_request_body.started request=<Request [b'POST']>
DEBUG:httpcore.http11:send_request_body.complete
DEBUG:httpcore.http11:receive_response_headers.started request=<Request [b'POST']>
DEBUG:httpcore.http11:receive_response_headers.complete return_value=(b'HTTP/1.1', 200, b'OK', [(b'Content-Length', b'3417'), (b'Content-Type', b'application/json'), (b'skip-error-remapping', b'true'), (b'x-ms-is-spilled-over', b'false'), (b'x-ratelimit-key', b'gpt-5-swe-agent'), (b'x-ratelimit-remaining-requests', b'1499'), (b'x-ratelimit-reset-requests', b'0'), (b'x-ratelimit-limit-requests', b'1500'), (b'x-ratelimit-renewalperiod-requests', b'60'), (b'x-ratelimit-abusepenalty-active', b'False'), (b'x-ratelimit-remaining-tokens', b'149161'), (b'x-ratelimit-reset-tokens', b'0'), (b'x-ratelimit-limit-tokens', b'150000'), (b'x-ratelimit-renewalperiod-tokens', b'60'), (b'azureai-fe-is-streaming', b'False'), (b'x-ms-served-model', b'gpt-5-2025-08-07'), (b'x-request-id', b'3c3aec9f-bbd9-47b2-943d-4a5c8f52fefe'), (b'apim-request-id', b'fb7528d8-6f51-40e2-93f4-f176fa9ec7c6'), (b'Strict-Transport-Security', b'max-age=31536000; includeSubDomains; preload'), (b'x-ms-client-request-id', b'Not-Set'), (b'x-content-type-options', b'nosniff'), (b'x-ms-region', b'East US 2'), (b'Date', b'Sat, 23 May 2026 03:26:37 GMT')])
INFO:httpx:HTTP Request: POST https://azlinux-chatbot-2025.openai.azure.com/openai/v1/responses "HTTP/1.1 200 OK"
DEBUG:httpcore.http11:receive_response_body.started request=<Request [b'POST']>
DEBUG:httpcore.http11:receive_response_body.complete
DEBUG:httpcore.http11:response_closed.started
DEBUG:httpcore.http11:response_closed.complete
DEBUG:openai._base_client:HTTP Response: POST https://azlinux-chatbot-2025.openai.azure.com/openai/v1/responses "200 OK" Headers({'content-length': '3417', 'content-type': 'application/json', 'skip-error-remapping': 'true', 'x-ms-is-spilled-over': 'false', 'x-ratelimit-key': 'gpt-5-swe-agent', 'x-ratelimit-remaining-requests': '1499', 'x-ratelimit-reset-requests': '0', 'x-ratelimit-limit-requests': '1500', 'x-ratelimit-renewalperiod-requests': '60', 'x-ratelimit-abusepenalty-active': 'False', 'x-ratelimit-remaining-tokens': '149161', 'x-ratelimit-reset-tokens': '0', 'x-ratelimit-limit-tokens': '150000', 'x-ratelimit-renewalperiod-tokens': '60', 'azureai-fe-is-streaming': 'False', 'x-ms-served-model': 'gpt-5-2025-08-07', 'x-request-id': '3c3aec9f-bbd9-47b2-943d-4a5c8f52fefe', 'apim-request-id': 'fb7528d8-6f51-40e2-93f4-f176fa9ec7c6', 'strict-transport-security': 'max-age=31536000; includeSubDomains; preload', 'x-ms-client-request-id': 'Not-Set', 'x-content-type-options': 'nosniff', 'x-ms-region': 'East US 2', 'date': 'Sat, 23 May 2026 03:26:37 GMT'})
DEBUG:openai._base_client:request_id: 3c3aec9f-bbd9-47b2-943d-4a5c8f52fefe
INFO:microbots.llm.llm:The llm response is {'task_done': False, 'thoughts': 'Open the code directory to inspect app.c referenced in the build.log and confirm the syntax error.', 'command': 'ls -1 //workdir/code'} 
INFO: MicroBot :-------------------- Step-4 --------------------
INFO: MicroBot : 💭  LLM thoughts: Open the code directory to inspect app.c referenced in the build.log and confirm the syntax error.
INFO: MicroBot : ➡️  LLM tool call : "ls -1 //workdir/code"
DEBUG:microbots.environment.local_docker.LocalDockerEnvironment:➡️  Executing command in container: ls -1 //workdir/code
DEBUG:urllib3.connectionpool:Starting new HTTP connection (1): localhost:58241
DEBUG:urllib3.connectionpool:http://localhost:58241 "POST / HTTP/1.1" 200 87
DEBUG:microbots.environment.local_docker.LocalDockerEnvironment:Command completed in 0.00s
DEBUG:microbots.environment.local_docker.LocalDockerEnvironment:⬅️  Return Code: 0,
Stdout:
app.c
build.log
Stderr:

DEBUG: MicroBot : 🔧  Command executed.
Return Code: 0
Stdout:
app.c
build.log
Stderr:

INFO: MicroBot : ⬅️  Command output:
app.c
build.log
DEBUG:openai._base_client:Request options: {'method': 'post', 'url': '/responses', 'files': None, 'idempotency_key': 'stainless-python-retry-72314b96-e05c-409d-a1be-956a9e2b1559', 'json_data': {'input': [{'role': 'system', 'content': '\n        \nYou are a helpful agent well versed in software development and debugging.\n\nYou will be provided with a coding or debugging task to complete inside a sandboxed shell environment.\nThere is a shell session open for you.\nYou will be provided with a task and you should achieve it using the shell commands.\nAll your response must be in the following json format:\n\n{\n    "task_done": <bool>,  // Indicates if the task is completed\n    "thoughts": <str>,     // The reasoning behind the decision\n    "command": <str>     // The command to be executed\n}\n\nThe properties ( task_done, thoughts, command ) are mandatory on each response.\nGive the command one at a time to solve the given task. As long as you\'re not done with the task, set task_done to false.\nWhen you are sure that the task is completed, set task_done to true, set command to empty string and provide your final thoughts in the thoughts field.\nDon\'t add any chat or extra messages outside the json format. Because the system will parse only the json response.\nAny of your thoughts must be in the \'thoughts\' field.\n\nafter each command, the system will execute the command and respond to you with the output.\nEnsure to run only one command at a time.\nNEVER use commands that produce large amounts of output or take a long time to run to avoid exceeding context limits.\nUse specific patterns: \'find <path> -name "*.c" -maxdepth 2\' instead of recursive exploration.\nNo human is involved in the task. So, don\'t seek human intervention.\n\nRemember following important points\n1. If a command fails, analyze the error message and provide an alternative command in your next response. Same command will not pass again.\n2. Avoid using recursive commands like \'ls -R\', \'rm -rf\', \'tree\', or \'find\' without depth limits as they can produce excessive output or be destructive.\n3. You cannot run any interactive commands like vim, nano, etc.\n\n        You are a helpful log analysis bot. Your job is to analyze a log file and identify the root-cause if there are any failure. You\'ll be given read-only access to the code from where the log is generated. The read-only code is available at //workdir/code.\n\nThe log file to analyze will be given in the user prompt. You can find the provided log file under the directory //var/log/\n\nOnly when you have run all necessary commands and identified the root cause, you should give me the final result.\n        '}, {'role': 'user', 'content': '\n            Analyze the log file `/var/log`\n        '}, {'role': 'assistant', 'content': '{"task_done": false, "thoughts": "First, I need to see what files exist under /var/log to identify the target log file(s) for analysis.", "command": "ls -1 /var/log"}'}, {'role': 'user', 'content': 'ShellCommunicator.log\nalternatives.log\napt\nbtmp\nbuild.log\ndpkg.log\nfontconfig.log\nlastlog\nwtmp'}, {'role': 'assistant', 'content': '{"task_done": false, "thoughts": "Identify which log contains failures. Start with build.log as it\'s commonly used for build errors, but first check its length to avoid dumping huge content.", "command": "wc -l /var/log/build.log 2>/dev/null || echo \'no build.log or not regular file\'"}'}, {'role': 'user', 'content': '7 /var/log/build.log'}, {'role': 'assistant', 'content': '{"task_done": false, "thoughts": "The build.log is small; display its contents to analyze any errors or warnings.", "command": "sed -n \'1,120p\' /var/log/build.log"}'}, {'role': 'user', 'content': 'app.c: In function ‘add’:\napp.c:5:17: error: expected ‘;’ before ‘}’ token\n    5 |     return a + b\n      |                 ^\n      |                 ;\n    6 | }\n      | ~'}, {'role': 'assistant', 'content': '{"task_done": false, "thoughts": "Open the code directory to inspect app.c referenced in the build.log and confirm the syntax error.", "command": "ls -1 //workdir/code"}'}, {'role': 'user', 'content': 'app.c\nbuild.log'}], 'model': 'gpt-5-swe-agent'}}
DEBUG:openai._base_client:Sending HTTP Request: POST https://azlinux-chatbot-2025.openai.azure.com/openai/v1/responses
DEBUG:httpcore.http11:send_request_headers.started request=<Request [b'POST']>
DEBUG:httpcore.http11:send_request_headers.complete
DEBUG:httpcore.http11:send_request_body.started request=<Request [b'POST']>
DEBUG:httpcore.http11:send_request_body.complete
DEBUG:httpcore.http11:receive_response_headers.started request=<Request [b'POST']>
DEBUG:httpcore.http11:receive_response_headers.complete return_value=(b'HTTP/1.1', 200, b'OK', [(b'Content-Length', b'3385'), (b'Content-Type', b'application/json'), (b'skip-error-remapping', b'true'), (b'x-ms-is-spilled-over', b'false'), (b'x-ratelimit-key', b'gpt-5-swe-agent'), (b'x-ratelimit-remaining-requests', b'1499'), (b'x-ratelimit-reset-requests', b'0'), (b'x-ratelimit-limit-requests', b'1500'), (b'x-ratelimit-renewalperiod-requests', b'60'), (b'x-ratelimit-abusepenalty-active', b'False'), (b'x-ratelimit-remaining-tokens', b'149115'), (b'x-ratelimit-reset-tokens', b'0'), (b'x-ratelimit-limit-tokens', b'150000'), (b'x-ratelimit-renewalperiod-tokens', b'60'), (b'azureai-fe-is-streaming', b'False'), (b'x-ms-served-model', b'gpt-5-2025-08-07'), (b'x-request-id', b'97d588c8-c33c-4a39-b9fa-3e274b3d1ddd'), (b'apim-request-id', b'a3ac38e9-5f82-496e-8ed1-466de0e10980'), (b'Strict-Transport-Security', b'max-age=31536000; includeSubDomains; preload'), (b'x-ms-client-request-id', b'Not-Set'), (b'x-content-type-options', b'nosniff'), (b'x-ms-region', b'East US 2'), (b'Date', b'Sat, 23 May 2026 03:26:40 GMT')])
INFO:httpx:HTTP Request: POST https://azlinux-chatbot-2025.openai.azure.com/openai/v1/responses "HTTP/1.1 200 OK"
DEBUG:httpcore.http11:receive_response_body.started request=<Request [b'POST']>
DEBUG:httpcore.http11:receive_response_body.complete
DEBUG:httpcore.http11:response_closed.started
DEBUG:httpcore.http11:response_closed.complete
DEBUG:openai._base_client:HTTP Response: POST https://azlinux-chatbot-2025.openai.azure.com/openai/v1/responses "200 OK" Headers({'content-length': '3385', 'content-type': 'application/json', 'skip-error-remapping': 'true', 'x-ms-is-spilled-over': 'false', 'x-ratelimit-key': 'gpt-5-swe-agent', 'x-ratelimit-remaining-requests': '1499', 'x-ratelimit-reset-requests': '0', 'x-ratelimit-limit-requests': '1500', 'x-ratelimit-renewalperiod-requests': '60', 'x-ratelimit-abusepenalty-active': 'False', 'x-ratelimit-remaining-tokens': '149115', 'x-ratelimit-reset-tokens': '0', 'x-ratelimit-limit-tokens': '150000', 'x-ratelimit-renewalperiod-tokens': '60', 'azureai-fe-is-streaming': 'False', 'x-ms-served-model': 'gpt-5-2025-08-07', 'x-request-id': '97d588c8-c33c-4a39-b9fa-3e274b3d1ddd', 'apim-request-id': 'a3ac38e9-5f82-496e-8ed1-466de0e10980', 'strict-transport-security': 'max-age=31536000; includeSubDomains; preload', 'x-ms-client-request-id': 'Not-Set', 'x-content-type-options': 'nosniff', 'x-ms-region': 'East US 2', 'date': 'Sat, 23 May 2026 03:26:40 GMT'})
DEBUG:openai._base_client:request_id: 97d588c8-c33c-4a39-b9fa-3e274b3d1ddd
INFO:microbots.llm.llm:The llm response is {'task_done': False, 'thoughts': 'View the source file to confirm the syntax error location and cause.', 'command': "sed -n '1,120p' //workdir/code/app.c"} 
INFO: MicroBot :-------------------- Step-5 --------------------
INFO: MicroBot : 💭  LLM thoughts: View the source file to confirm the syntax error location and cause.
INFO: MicroBot : ➡️  LLM tool call : "sed -n '1,120p' //workdir/code/app.c"
DEBUG:microbots.environment.local_docker.LocalDockerEnvironment:➡️  Executing command in container: sed -n '1,120p' //workdir/code/app.c
DEBUG:urllib3.connectionpool:Starting new HTTP connection (1): localhost:58241
DEBUG:urllib3.connectionpool:http://localhost:58241 "POST / HTTP/1.1" 200 319
DEBUG:microbots.environment.local_docker.LocalDockerEnvironment:Command completed in 0.00s
DEBUG:microbots.environment.local_docker.LocalDockerEnvironment:⬅️  Return Code: 0,
Stdout:
// app.c — A simple greeting program with a syntax error
#include <stdio.h>

int add(int a, int b) {
    return a + b
}

int main(void) {
    printf("Hello, Microbots!\n");
    printf("2 + 3 = %d\n", add(2, 3));
    return 0;
}

Stderr:

DEBUG: MicroBot : 🔧  Command executed.
Return Code: 0
Stdout:
// app.c — A simple greeting program with a syntax error
#include <stdio.h>

int add(int a, int b) {
    return a + b
}

int main(void) {
    printf("Hello, Microbots!\n");
    printf("2 + 3 = %d\n", add(2, 3));
    return 0;
}

Stderr:

INFO: MicroBot : ⬅️  Command output:
// app.c — A simple greeting program with a syntax error
#include <stdio.h>

int add(int a, int b) {
    return a + b
}

int main(void) {
    printf("Hello, Microbots!\n");
    printf("2 + 3 = %d\n", add(2, 3));
    return 0;
}

DEBUG:openai._base_client:Request options: {'method': 'post', 'url': '/responses', 'files': None, 'idempotency_key': 'stainless-python-retry-ab5d3110-8393-4095-ad6c-7b3b1fd0ea94', 'json_data': {'input': [{'role': 'system', 'content': '\n        \nYou are a helpful agent well versed in software development and debugging.\n\nYou will be provided with a coding or debugging task to complete inside a sandboxed shell environment.\nThere is a shell session open for you.\nYou will be provided with a task and you should achieve it using the shell commands.\nAll your response must be in the following json format:\n\n{\n    "task_done": <bool>,  // Indicates if the task is completed\n    "thoughts": <str>,     // The reasoning behind the decision\n    "command": <str>     // The command to be executed\n}\n\nThe properties ( task_done, thoughts, command ) are mandatory on each response.\nGive the command one at a time to solve the given task. As long as you\'re not done with the task, set task_done to false.\nWhen you are sure that the task is completed, set task_done to true, set command to empty string and provide your final thoughts in the thoughts field.\nDon\'t add any chat or extra messages outside the json format. Because the system will parse only the json response.\nAny of your thoughts must be in the \'thoughts\' field.\n\nafter each command, the system will execute the command and respond to you with the output.\nEnsure to run only one command at a time.\nNEVER use commands that produce large amounts of output or take a long time to run to avoid exceeding context limits.\nUse specific patterns: \'find <path> -name "*.c" -maxdepth 2\' instead of recursive exploration.\nNo human is involved in the task. So, don\'t seek human intervention.\n\nRemember following important points\n1. If a command fails, analyze the error message and provide an alternative command in your next response. Same command will not pass again.\n2. Avoid using recursive commands like \'ls -R\', \'rm -rf\', \'tree\', or \'find\' without depth limits as they can produce excessive output or be destructive.\n3. You cannot run any interactive commands like vim, nano, etc.\n\n        You are a helpful log analysis bot. Your job is to analyze a log file and identify the root-cause if there are any failure. You\'ll be given read-only access to the code from where the log is generated. The read-only code is available at //workdir/code.\n\nThe log file to analyze will be given in the user prompt. You can find the provided log file under the directory //var/log/\n\nOnly when you have run all necessary commands and identified the root cause, you should give me the final result.\n        '}, {'role': 'user', 'content': '\n            Analyze the log file `/var/log`\n        '}, {'role': 'assistant', 'content': '{"task_done": false, "thoughts": "First, I need to see what files exist under /var/log to identify the target log file(s) for analysis.", "command": "ls -1 /var/log"}'}, {'role': 'user', 'content': 'ShellCommunicator.log\nalternatives.log\napt\nbtmp\nbuild.log\ndpkg.log\nfontconfig.log\nlastlog\nwtmp'}, {'role': 'assistant', 'content': '{"task_done": false, "thoughts": "Identify which log contains failures. Start with build.log as it\'s commonly used for build errors, but first check its length to avoid dumping huge content.", "command": "wc -l /var/log/build.log 2>/dev/null || echo \'no build.log or not regular file\'"}'}, {'role': 'user', 'content': '7 /var/log/build.log'}, {'role': 'assistant', 'content': '{"task_done": false, "thoughts": "The build.log is small; display its contents to analyze any errors or warnings.", "command": "sed -n \'1,120p\' /var/log/build.log"}'}, {'role': 'user', 'content': 'app.c: In function ‘add’:\napp.c:5:17: error: expected ‘;’ before ‘}’ token\n    5 |     return a + b\n      |                 ^\n      |                 ;\n    6 | }\n      | ~'}, {'role': 'assistant', 'content': '{"task_done": false, "thoughts": "Open the code directory to inspect app.c referenced in the build.log and confirm the syntax error.", "command": "ls -1 //workdir/code"}'}, {'role': 'user', 'content': 'app.c\nbuild.log'}, {'role': 'assistant', 'content': '{"task_done": false, "thoughts": "View the source file to confirm the syntax error location and cause.", "command": "sed -n \'1,120p\' //workdir/code/app.c"}'}, {'role': 'user', 'content': '// app.c — A simple greeting program with a syntax error\n#include <stdio.h>\n\nint add(int a, int b) {\n    return a + b\n}\n\nint main(void) {\n    printf("Hello, Microbots!\\n");\n    printf("2 + 3 = %d\\n", add(2, 3));\n    return 0;\n}\n'}], 'model': 'gpt-5-swe-agent'}}
DEBUG:openai._base_client:Sending HTTP Request: POST https://azlinux-chatbot-2025.openai.azure.com/openai/v1/responses
DEBUG:httpcore.http11:send_request_headers.started request=<Request [b'POST']>
DEBUG:httpcore.http11:send_request_headers.complete
DEBUG:httpcore.http11:send_request_body.started request=<Request [b'POST']>
DEBUG:httpcore.http11:send_request_body.complete
DEBUG:httpcore.http11:receive_response_headers.started request=<Request [b'POST']>
DEBUG:httpcore.http11:receive_response_headers.complete return_value=(b'HTTP/1.1', 200, b'OK', [(b'Content-Length', b'3671'), (b'Content-Type', b'application/json'), (b'skip-error-remapping', b'true'), (b'x-ms-is-spilled-over', b'false'), (b'x-ratelimit-key', b'gpt-5-swe-agent'), (b'x-ratelimit-remaining-requests', b'1499'), (b'x-ratelimit-reset-requests', b'0'), (b'x-ratelimit-limit-requests', b'1500'), (b'x-ratelimit-renewalperiod-requests', b'60'), (b'x-ratelimit-abusepenalty-active', b'False'), (b'x-ratelimit-remaining-tokens', b'149019'), (b'x-ratelimit-reset-tokens', b'0'), (b'x-ratelimit-limit-tokens', b'150000'), (b'x-ratelimit-renewalperiod-tokens', b'60'), (b'azureai-fe-is-streaming', b'False'), (b'x-ms-served-model', b'gpt-5-2025-08-07'), (b'x-request-id', b'44639273-62ce-4745-9a38-312df81a6a55'), (b'apim-request-id', b'ded44f61-5684-4b49-923d-c7753490e401'), (b'Strict-Transport-Security', b'max-age=31536000; includeSubDomains; preload'), (b'x-ms-client-request-id', b'Not-Set'), (b'x-content-type-options', b'nosniff'), (b'x-ms-region', b'East US 2'), (b'Date', b'Sat, 23 May 2026 03:26:47 GMT')])
INFO:httpx:HTTP Request: POST https://azlinux-chatbot-2025.openai.azure.com/openai/v1/responses "HTTP/1.1 200 OK"
DEBUG:httpcore.http11:receive_response_body.started request=<Request [b'POST']>
DEBUG:httpcore.http11:receive_response_body.complete
DEBUG:httpcore.http11:response_closed.started
DEBUG:httpcore.http11:response_closed.complete
DEBUG:openai._base_client:HTTP Response: POST https://azlinux-chatbot-2025.openai.azure.com/openai/v1/responses "200 OK" Headers({'content-length': '3671', 'content-type': 'application/json', 'skip-error-remapping': 'true', 'x-ms-is-spilled-over': 'false', 'x-ratelimit-key': 'gpt-5-swe-agent', 'x-ratelimit-remaining-requests': '1499', 'x-ratelimit-reset-requests': '0', 'x-ratelimit-limit-requests': '1500', 'x-ratelimit-renewalperiod-requests': '60', 'x-ratelimit-abusepenalty-active': 'False', 'x-ratelimit-remaining-tokens': '149019', 'x-ratelimit-reset-tokens': '0', 'x-ratelimit-limit-tokens': '150000', 'x-ratelimit-renewalperiod-tokens': '60', 'azureai-fe-is-streaming': 'False', 'x-ms-served-model': 'gpt-5-2025-08-07', 'x-request-id': '44639273-62ce-4745-9a38-312df81a6a55', 'apim-request-id': 'ded44f61-5684-4b49-923d-c7753490e401', 'strict-transport-security': 'max-age=31536000; includeSubDomains; preload', 'x-ms-client-request-id': 'Not-Set', 'x-content-type-options': 'nosniff', 'x-ms-region': 'East US 2', 'date': 'Sat, 23 May 2026 03:26:47 GMT'})
DEBUG:openai._base_client:request_id: 44639273-62ce-4745-9a38-312df81a6a55
INFO:microbots.llm.llm:The llm response is {'task_done': True, 'thoughts': "Root cause identified from /var/log/build.log: C compilation fails due to a syntax error in //workdir/code/app.c. Specifically, in function add (line 5), the return statement is missing a trailing semicolon: 'return a + b' should be 'return a + b;'. This triggers the compiler error: 'expected ';' before '}' token'. Fix: add the semicolon after the return expression.", 'command': ''} 
INFO: MicroBot : 💭  LLM final thoughts: Root cause identified from /var/log/build.log: C compilation fails due to a syntax error in //workdir/code/app.c. Specifically, in function add (line 5), the return statement is missing a trailing semicolon: 'return a + b' should be 'return a + b;'. This triggers the compiler error: 'expected ';' before '}' token'. Fix: add the semicolon after the return expression.
INFO: MicroBot :🔚 TASK COMPLETED : 
            An...
Root cause identified from /var/log/build.log: C compilation fails due to a syntax error in //workdir/code/app.c. Specifically, in function add (line 5), the return statement is missing a trailing semicolon: 'return a + b' should be 'return a + b;'. This triggers the compiler error: 'expected ';' before '}' token'. Fix: add the semicolon after the return expression.
INFO:microbots.environment.local_docker.LocalDockerEnvironment:🛠️  Tearing down overlay mount for code
DEBUG:microbots.environment.local_docker.LocalDockerEnvironment:➡️  Executing command in container: umount -l //workdir/code
DEBUG:urllib3.connectionpool:Starting new HTTP connection (1): localhost:58241
DEBUG:urllib3.connectionpool:http://localhost:58241 "POST / HTTP/1.1" 200 71
DEBUG:microbots.environment.local_docker.LocalDockerEnvironment:Command completed in 0.01s
DEBUG:microbots.environment.local_docker.LocalDockerEnvironment:⬅️  Return Code: 0,
Stdout:

Stderr:

INFO:microbots.environment.local_docker.LocalDockerEnvironment:✅  Unmounted overlay for code
INFO:microbots.environment.local_docker.LocalDockerEnvironment:🛑  Removing overlay dirs at //workdir/code and /workdir/overlay/
DEBUG:microbots.environment.local_docker.LocalDockerEnvironment:➡️  Executing command in container: rm -rf //workdir/code && rm -rf /workdir/overlay/
DEBUG:urllib3.connectionpool:Starting new HTTP connection (1): localhost:58241
DEBUG:urllib3.connectionpool:http://localhost:58241 "POST / HTTP/1.1" 200 71
DEBUG:microbots.environment.local_docker.LocalDockerEnvironment:Command completed in 0.00s
DEBUG:microbots.environment.local_docker.LocalDockerEnvironment:⬅️  Return Code: 0,
Stdout:

Stderr:

INFO:microbots.environment.local_docker.LocalDockerEnvironment:🗑️  Removed overlay directories for code
DEBUG:urllib3.connectionpool:http://localhost:None "POST /v1.54/containers/5f1012fd83ae4a70bc9c7223afe67345c4bb467557ae711794e26217fd23fdbf/stop HTTP/1.1" 204 0
DEBUG:urllib3.connectionpool:http://localhost:None "DELETE /v1.54/containers/5f1012fd83ae4a70bc9c7223afe67345c4bb467557ae711794e26217fd23fdbf?v=False&link=False&force=False HTTP/1.1" 204 0
INFO:microbots.environment.local_docker.LocalDockerEnvironment:🗑️  Removed working directory at /home/sikannan/MICROBOTS_WORKDIR_79b91420
DEBUG:httpcore.connection:close.started
DEBUG:httpcore.connection:close.complete